# src/routers/index.ts
@@ -1,21 +1,21 @@
-// 一括ルーティング設定ファイル
-import express from 'express'
-import * as handler from '../handlers'
+import express from 'express';
+import * as handler from '../handlers';
 
-const router = express.Router()
-//------ /todos ----------
-router.route('/todos')
-//------ Todoの一覧を得る -----
-.get(handler.getTodos)
-//------ Todoを一件追加する -----
-.post(handler.addTodo)
+const router = express.Router();
+//------ /users ----------
+router
+  .route('/users')
+  //------ Userの一覧を得る -----
+  .get(handler.getUsers)
+  //------ Userを一件追加する -----
+  .post(handler.addUser);
 
-//------ /todos/{todo_id}/ ----------
-router.route('/todos/:todo_id/')
-//------ idを使って特定のTodoを得る -----
-.get(handler.getTodoById)
-//------ idを使って特定のTodoを変更する -----
-.put(handler.updateTodo)
+//------ /users/{user_id}/ ----------
+router
+  .route('/users/:user_id/')
+  //------ idを使って特定のUserを得る -----
+  .get(handler.getUserById)
+  //------ idを使って特定のUserを変更する -----
+  .put(handler.updateUser);
 
-
-export default router
+export default router;
