# swagger.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   version: '1.0.0'
-  title: Todo App
+  title: Workshop App
 schemes:
   - http
 consumes:
@@ -9,35 +9,35 @@ consumes:
 produces:
   - application/json
 paths:
-  /todos:
+  /users:
     get:
-      summary: Todoの一覧を得る
-      operationId: getTodos
+      summary: Userの一覧を得る
+      operationId: getUsers
       description: |
-        get list of todo 
+        get list of user 
       responses:
         200:
           description: OK
           schema:
             type: "array"
             items:
-              $ref: '#/definitions/Todo'
+              $ref: '#/definitions/User'
         400:
           description: Error
           schema:
             $ref: '#/definitions/ErrorResponse'
     post:
-      summary: Todoを一件追加する
-      operationId: addTodo
+      summary: Userを一件追加する
+      operationId: addUser
       description: |
-        add a todo
+        add a user
       parameters:
         - name: body
           in: body
-          description: TODO object
+          description: user object
           required: true
           schema:
-             $ref: '#/definitions/Todo'
+             $ref: '#/definitions/User'
       responses:
         201:
           description: OK
@@ -46,66 +46,66 @@ paths:
           schema:
             $ref: '#/definitions/ErrorResponse'
 
-  /todos/{todo_id}/:
+  /users/{user_id}/:
     get:
-      summary: idを使って特定のTodoを得る
-      operationId: getTodoById
+      summary: idを使って特定のUserを得る
+      operationId: getUserById
       description: |
-        get a todo by id
+        get a user by id
       parameters:
-        - name: todo_id
+        - name: user_id
           in: path
           required: true
           type: integer
-          description: ID of TODO
+          description: ID of user
       responses:
         200:
           description: OK
           schema:
-            $ref: '#/definitions/Todo'
+            $ref: '#/definitions/User'
         400:
           description: Error
           schema:
             $ref: '#/definitions/ErrorResponse'
     put:
-      summary: idを使って特定のTodoを変更する
-      operationId: updateTodo
+      summary: idを使って特定のUserを変更する
+      operationId: updateUser
       description: |
-        update a todo
+        update a user
       parameters:
-        - name: todo_id
+        - name: user_id
           in: path
           required: true
           type: integer
-          description: ID of TODO
+          description: ID of user
         - name: body
           in: body
-          description: TODO object
+          description: user object
           required: true
           schema:
-             $ref: '#/definitions/Todo'
+             $ref: '#/definitions/User'
       responses:
         200:
           description: OK
           schema:
-            $ref: '#/definitions/Todo'
+            $ref: '#/definitions/User'
         400:
           description: Error
           schema:
             $ref: '#/definitions/ErrorResponse'
 definitions:
-  Todo:
+  User:
     type: object
     required:
       - id
-      - naiyo
-      - kinkyu
+      - userId
+      - password
     properties:
       id:
         type: integer
-      naiyo:
+      userId:
         type: string
-      kinkyu:
+      password:
         type: string
   ErrorResponse:
     type: object
